# sokoban-ai-solver

./: .gitignore  README.md  batch_run.py  main.py  manual_play.py  pyproject.toml
dataset/human_demos/: 1_1.txt  1_10.txt  1_11.txt  1_12.txt  1_13.txt  1_14.txt  1_15.txt  1_16.txt  1_17.txt  1_18.txt  1_3.txt  1_4.txt  1_5.txt  1_6.txt  1_7.txt  1_8.txt  1_9.txt  2_0.txt  2_1.txt  2_10.txt  2_11.txt  2_12.txt  2_13.txt  2_14.txt  2_15.txt  2_16.txt  2_17.txt  2_18.txt  2_19.txt  2_2.txt  2_20.txt  2_3.txt  2_4.txt  2_5.txt  2_6.txt  2_7.txt  2_8.txt  2_9.txt  3_1.txt  3_10.txt  (+57 more)
render/: generate_gif.py
src/: config.py
src/graph/: sokoban_graph.py
src/graph/llm/: client.py  client_claude.py  client_openai.py
src/graph/nodes/: executor.py  llm_caller.py  result_displayer.py  state.py  state_initiator.py  validator.py
src/sokoban/: game_environment.py
test-code/: result_map_4_1_by_gpt_4o.txt  result_map_4_1_by_gpt_oss_20b.txt  test_openai.py  test_post_processing.py
