[project]
name = "sokoban-llm-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "anthropic>=0.40.0",
    "bitsandbytes>=0.48.1",
    "imageio>=2.37.0",
    "langchain>=0.3.27",
    "langgraph>=0.6.6",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "setuptools>=80.9.0",
    "vllm>=0.5.0.post1",
]
